[package]
name = "quem_precisa_de_webkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
ashpd = { version = "0.4.0-alpha.1", features = [
    "pipewire",
    "gtk4",
    "tokio",
    "wayland",
], default-features = false }
pipewire = "0.5.0"
gstreamer = "0.19.4"
